[gd_scene load_steps=4 format=3 uid="uid://7xgaysp5u4gt"]

[ext_resource type="Script" path="res://mods-unpacked/Emerald-QOL/Scripts/Menus/mod_options.gd" id="1_bavup"]
[ext_resource type="PackedScene" uid="uid://dmv3oqw36ypmm" path="res://Scenes/Popups/Options/OptionLine.tscn" id="2_7sr5w"]
[ext_resource type="PackedScene" uid="uid://cjqgfnah8fy1f" path="res://Scenes/UI/Buttons/TextButton.tscn" id="2_kvome"]

[node name="ModOptions" type="PanelContainer"]
offset_right = 166.0
offset_bottom = 77.0
theme_type_variation = &"FilledPanel"
script = ExtResource("1_bavup")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OptionsVBox" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="OptionLine" parent="VBoxContainer/MarginContainer/ScrollContainer/OptionsVBox" instance=ExtResource("2_7sr5w")]
unique_name_in_owner = true
layout_mode = 2
options = Array[String](["1x", "2x", "2.5x", "3x", "4x"])
_option_name = "speed_scale"
option_id = "speed_scale"

[node name="OptionLine2" parent="VBoxContainer/MarginContainer/ScrollContainer/OptionsVBox" instance=ExtResource("2_7sr5w")]
unique_name_in_owner = true
layout_mode = 2
options = Array[String](["on", "off"])
_option_name = "show_resources_in_battle"
option_id = "show_resource"

[node name="BackBtn" parent="VBoxContainer" instance=ExtResource("2_kvome")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8
btn_text = "back"
main_color = Color(0.941176, 0.227451, 0.247059, 1)
